--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "three": "^0.169.0",
     "vite": "^5.4.8",
     "vite-plugin-restart": "^0.4.1"
   }
