--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "howler": "^2.2.4",
     "normalize-wheel": "^1.0.1",
     "stats-gl": "^3.6.0",
-    "three": "github:mrdoob/three.js#dev",
+    "three": "^0.171.0",
     "tweakpane": "^4.0.4",
     "vite": "^5.4.8",
     "vite-plugin-restart": "^0.4.1"
