--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tweakpane/plugin-camerakit": "^0.3.0",
     "@tweakpane/plugin-essentials": "^0.2.1",
     "camera-controls": "^2.9.0",
+    "emoji-regex": "^10.4.0",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
     "msgpack-lite": "^0.1.26",
