--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tweakpane/plugin-essentials": "^0.2.1",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
     "camera-controls": "^2.9.0",
+    "dotenv": "^17.2.3",
     "emoji-regex": "^10.4.0",
     "glob": "^13.0.0",
     "gsap": "^3.12.5",
