--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 VITE_SERVER_URL=
 VITE_ANALYTICS_TAG=
 VITE_GAME_PUBLIC=
+VITE_COMPRESSED=
 VITE_DAY_CYCLE_PROGRESS=
 VITE_YEAR_CYCLE_PROGRESS=
 VITE_WHISPERS_COUNT=30
